--- a/notebooks/example.ipynb
+++ b/notebooks/example.ipynb
@@ -62,11 +62,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Some Example Title\n",
+    "# Some Example Title. TEST VERSION\n",
     "\n",
     "A [link](www.google.com)\n",
     "\n",
@@ -1047,9 +1054,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "github-pages",
+   "display_name": "github_pages",
    "language": "python",
-   "name": "python3"
+   "name": "github_pages"
   },
   "language_info": {
    "codemirror_mode": {
