--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -7,7 +7,8 @@
    "source": [
     "## Content\n",
     "\n",
-    "1. [example](./example.html)"
+    "1. [example](./example.html)\n",
+    "2. [publishedproject](./publishedproject.html)"
    ]
   }
  ],
